# aurora

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  hacs.json  info.md  pyproject.toml  requirements_test.txt
.github/workflows/: ci.yaml  hassfest.yaml  validate.yaml
aurora-card/: package-lock.json  package.json  rollup.config.js  tsconfig.json
aurora-card/src/: activity-view.ts  alarm-dialog.ts  alarm-list.ts  api.ts  audio-presets.ts  aurora-card-editor.ts  aurora-card.ts  aurora-panel.ts  devices-view.ts  entity-picker.ts  globals-view.ts  index.ts  localize.ts  media-browser.ts  mission-overlay.ts  missions.ts  ring-display.ts  ring-overlay.ts  schedule-card.ts  theme.ts  translations.ts  types.ts  vision-prompt.ts  weekday-chips.ts
brands/: README.md
design/: aurora-alarms-responsive.html
docs/: DECISIONS.md  RESEARCH.md
tests/: __init__.py  conftest.py  test_activity.py  test_adapter_display.py  test_adapter_light.py  test_briefing.py  test_briefing_service.py  test_capabilities.py  test_config_flow.py  test_coordinator_prewarm.py  test_coordinator_vision_resolve.py  test_diagnostics.py  test_entities.py  test_init.py  test_intents.py  test_models.py  test_models_display.py  test_repairs.py  test_ring_display.py  test_ring_flow.py  test_scheduler.py  test_scheduling.py  test_services.py  test_sleep.py  test_smart_wake.py  test_storage.py  test_vision.py  test_vision_engine.py  test_vision_models.py  test_websocket.py  validate_assets.py
tools/: gen-brands.mjs  package-lock.json  package.json
(+46 files in other folders)
