[project]
name = "aurora-ha"
version = "0.0.1"
description = "Aurora — a capability-first smart alarm clock for Home Assistant"
requires-python = ">=3.14"
readme = "README.md"

[tool.ruff]
target-version = "py314"
line-length = 88
src = ["custom_components", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "ASYNC", # flake8-async
    "D",   # pydocstyle
    "SIM", # flake8-simplify
    "RUF",
]
ignore = [
    "D203", # one-blank-line-before-class (conflicts with D211)
    "D213", # multi-line-summary-second-line (conflicts with D212)
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["custom_components.aurora"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=custom_components.aurora --cov-report=term-missing"
